feat(Core): Add FanSpeedTurbo ControlCapability
